<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaloonPop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play!</string>
    <string name="settings_title">Settings</string>
    <string name="sound">Sound</string>
    <string name="vibrate_off">Vibrate Off</string>
    <string name="vibrate_low">Vibrate Low</string>
    <string name="vibrate_high">Vibrate High</string>
    <string name="gms_sign_out">Sign Out of G+ Games</string>
    <string name="points_leaderboard">Best Round Leaderboard</string>
    <string name="pointsperpin_leaderboard">Points/Pin Leaderboard</string>
    <string name="balloons_leaderboard">Balloons Popped Leaderboard</string>
    <string name="achievements">Achievements</string>
    <string name="title_activity_high_score">High Scores and Achievements</string>
    <string name="highscores">High Scores and Achievements</string>

</resources>
