<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    tools:context=".HighScoreActivity" >

    <TextView
        android:id="@+id/highscoretitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:textColor="@color/titleblue"
        android:textAlignment="center"
        android:padding="8dp"
        android:background="@color/paleblue"
        android:textSize="25sp" 
        android:text="@string/highscores" />

    <Button
    android:id="@+id/points_leaderboard"
	android:layout_below="@+id/highscoretitle"
	android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
        android:background="@drawable/button_normal"
    android:text="@string/points_leaderboard"
    />

    <Button
    android:id="@+id/pointsperpin_leaderboard"
	android:layout_below="@+id/points_leaderboard"
	android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
        android:background="@drawable/button_normal"
    android:text="@string/pointsperpin_leaderboard"
    />

    <Button
    android:id="@+id/balloons_leaderboard"
	android:layout_below="@+id/pointsperpin_leaderboard"
	android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
        android:background="@drawable/button_normal"
    android:text="@string/balloons_leaderboard"
    />

    <Button
    android:id="@+id/achievements"
	android:layout_below="@+id/balloons_leaderboard"
	android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_centerHorizontal="true"
        android:background="@drawable/button_normal"
    android:text="@string/achievements"
    />

</RelativeLayout>
