<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:background="@drawable/button_normal"
        android:text="@string/play" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_normal"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/settings_title" />
    
    <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
     
    <Button
    android:id="@+id/sign_out_button"
	android:layout_toLeftOf="@+id/sign_in_button"
	style="?android:attr/buttonStyleSmall"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/gms_sign_out"
    android:visibility="gone" 
    />

    <Button
        android:id="@+id/highscores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
	    android:visibility="gone" 
        android:background="@drawable/button_normal"
        android:padding="8dp"
        android:text="@string/highscores" />

</RelativeLayout>
